update to the ammendments section

--- a/cssc-c.tex
+++ b/cssc-c.tex
@@ -19,8 +19,8 @@
 \usepackage{amssymb}
 \usepackage{graphicx}
 
-\author{Proposed By President Savill}
-\date{2017-10-24}
+\author{Proposed By President Savill on 2017-10-16}
+\date{Accepted 2017-10-30}
 \title{Computer Science Students Club Constitution}
 
 %To hide these full page chapter title page things which are just a waste of paper
@@ -34,13 +34,13 @@
 		\tableofcontents
 	\end{small}
 	\newpage
-	
+
 	\chapter{Admin and Membership}
-	
+
 	\section{Names and Objectives}
 		\subsection{Name}
 			The name of the club shall be the Computer Science Students' Club (CSSC)
-			
+
 		\subsection{Objectives}
 		The main objectives of the club are
 			\begin{enumerate}[label=\alph*]
@@ -57,7 +57,7 @@
 				\item To do all such things as would appear necessary and proper for the benefit or advancement of members to the Club.
 				\item To remain affiliated to the Societies Council.
 			\end{enumerate}
-	
+
 	\section{Membership}
 		\subsection{Ordinary membership}
 			Ordinary membership shall be confined to
@@ -67,13 +67,13 @@
 				\item Honorary Life Associates of the Guild
 				\item Members of the University Senate
 				\item Members of the University Staff
-				\item Students enrolled at the University of Western Australia. 
+				\item Students enrolled at the University of Western Australia.
 			\end{enumerate}
-		
+
 		\subsection{Provisional Membership}
 			Provisional membership shall be granted to any student studying any unit offered by the School of Computer Science and Software Engineering. \\
 			Provisional members shall be considered to be ordinary members for the purposes of voting and as a part of the quorum in general meetings upon approval of the returning officer or chair.
-			
+
 		\subsection{Associateship of the Club}
 			The Club, in general meeting, may from time to time admit to associateship persons who are, or have been:
 			\begin{enumerate}[label=\alph*]
@@ -87,7 +87,7 @@
 			\end{enumerate}
 		\subsection{Honorary Life Memberships}
 			The Club may in General Meeting by two-thirds majority of those present and voting confer Honorary Life Membership upon any member who has performed outstanding service to the Club.
-			
+
 		\subsection{Primacy of Ordinary Members}
 		Members other than Ordinary Members shall not:
 		\begin{enumerate}[label=\alph*]
@@ -99,19 +99,19 @@
 		\subsection{Council of Shadows}
 		Any member who at any point has been, but no longer is an Executive Office bearer is considered to be a part of the council of shadows.
 	\section{Subscription}
-	
+
 		\begin{enumerate}[label=\alph*]
 			\item The annual subscription for financial members shall be a minimum of \$7.00 AUD, payable by the 30th of June on each year.
-			
+
 			\item The second-semester only subscription for financial members shall be a minimum of \$3.50 AUD, payable only after the 1st of July and before the 31st of December on each year.
-			
+
 			\item Members of the Guild shall receive a \$2.00 AUD discount on financial membership for a full year, or \$1.00 AUD after the 1st of July and before the 31st of December.
-			
+
 			\item Financial Membership is valid until March 1st the following year.
 		\end{enumerate}
-	
+
 	\chapter{Meetings}
-	
+
 	\section{Meetings of the Club}
 	\begin{enumerate}[label=\alph*]
 		\item The Club shall hold its Annual General Meeting during the last six weeks of the University of Western Australia academic year, conversant with Provisions Governing General Meetings clause
@@ -122,11 +122,11 @@
 	\section{Provisions Governing General Meetings}
 	\begin{enumerate}[label=\alph*]
 		\item The Secretary or President shall cause written notice of any General Meeting together with the agenda therefore to be posted on the Computer Science Students Facebook page and in Guild Publications at least (7) seven days before the date appointed to that meeting
-		
+
 		\item No General Meeting may be held while a Guild General Meeting is in progress, provided that this shall not apply where the written notice of the meeting was given before the written notice of the Guild General Meeting. Any such meeting being conducted in contravention thereof shall disband immediately on the order of a disciplinary officer of the Guild.
-		
+
 		\item The quorum of General Meeting shall consist of ten(10) financial and ten(10) ordinary members who may or may not be the same people.
-		
+
 		\item All General Meetings of the Club shall be conducted in accordance with the procedure prescribed in the Standing Rules and Orders of the Guild Council
 	\end{enumerate}
 
@@ -134,17 +134,17 @@
 
 	\section{Elections}
 	\begin{enumerate}[label=\alph*]
-		
+
 		\item The club shall hold Elections of its committee within the first six weeks of each Academic Year at the University of Western Australia.
-		
+
 		\item The club shall hold Elections for the next year's executive committee in the last six weeks of the Academic Year at the University of Western Australia. Newly elected officials take their position on the 1\textsuperscript{st} of January at midnight.
-		
+
 		\item Nominations for all positions shall be open for a minimum of five (5) days.
-		
+
 		\item On the last day of the nomination period, the club shall also hold its Annual General Meeting, where the business shall consist of candidate speeches for all nominations, in the order of committee precedence, followed by any other agenda items.
-		
+
 		\item A returning officer shall be appointed by the current club committee before the opening of nominations.
-		
+
 	\end{enumerate}
 
 	\section{Provisions Governing Elections}
@@ -158,7 +158,7 @@
 			\item Proxy votes must be submitted via a secret ballot prior to the commencement of the election for the vote to be considered valid, pending approval from the returning officer.
 			\item All Elections of the Club shall be conducted in accordance with the regulations governing Guild Elections, except where overruled by this constitution.
 		\end{enumerate}
-	
+
 	\section{Committee Meetings}
 	\begin{enumerate}[label=\alph*]
 		\item The Committee shall meet as such times and places as the President shall determine
@@ -170,7 +170,7 @@
 		\subsection{Quorum and Procedure of the Committee}
 		\begin{enumerate}[label=\alph*]
 		\item The quorum of the Committee shall be 3, of whom at least 3 shall be Office Bearers.
-		\item All meetings of the Committee shall be conducted in accordance with the procedure prescribed in the Standing Rules and Orders of the Guild Council. 
+		\item All meetings of the Committee shall be conducted in accordance with the procedure prescribed in the Standing Rules and Orders of the Guild Council.
 		\end{enumerate}
 	\end{enumerate}
 
@@ -185,7 +185,7 @@
 		\end{enumerate}
 
 	\section{The Committee}
-	The Committee of the Club shall consist of: 
+	The Committee of the Club shall consist of:
 	\begin{enumerate}[label=\alph*]
 		\item The Executive Office Bearers
 		\item and the ordinary Committee which consists of:
@@ -216,13 +216,13 @@
 	\section{Conditions and Notes}
 		\subsection{Eligibility} Only financial and ordinary members of the Club who are members of the Guild shall be eligible for election as office bearers and ordinary committee positions, however non-financial ordinary members may still nominate.\\
 		A candidate defeated for one office may stand for any office lower on the list.
-		
+
 		\subsection{Exclusions} No Executive Office Bearer can hold more than one position simultaneously.
-		
+
 		\subsection{Election Format} Election shall be conducted by optional preferential ballot for each office in the order shown above.
-		
+
 		\subsection{Powers and Responsibilities} The powers and duties of each position are defined in subsequent Articles
-		
+
 	\section{Duration of Office}
 		The office bearers and the committee members shall remain in office until their successors are to take over their respective position except when:
 			\begin{enumerate}[label=\alph*]
@@ -250,7 +250,7 @@
 	The President shall have the right to take the chair at any meeting of the Club or of the Committee. \\
 	If the President is absent or does not wish to exercise his right at any meeting, that right shall develop upon the Vice-President. \\
 	In the event that both the President and Vice-President being absent or not wishing to exercise their right to the chair, that meeting shall elect its own chair.
-	
+
 	\section{Position Descriptions}
 	In addition to any provisions set out elsewhere in this constitution or in any by laws or Regulations made hereunder, committee positions shall have the duty of:
 		\subsection{President}
@@ -276,7 +276,7 @@
 					\item To notify the Secretary of the Guild within fourteen days from the making therefore of any alterations to this Constitution of such By-Laws.
 					\end{enumerate}
 				\item To notify the Secretary of Societies Council and Public Affairs Council of the names of the delegate and deputy delegate to Societies Council and Public Affairs Council at least four days before meetings of these respective councils in each calendar year.
-				\item In the event of the Club being de-registered, to present to the Guild Secretary within thirty days a duly audited statement of the financial position of the Club together with a copy of the resolution, which may have been passed by the Club as to the disposition of its funds. 
+				\item In the event of the Club being de-registered, to present to the Guild Secretary within thirty days a duly audited statement of the financial position of the Club together with a copy of the resolution, which may have been passed by the Club as to the disposition of its funds.
 			\end{enumerate}
 		\subsection{Treasurer}
 			\begin{enumerate}[label=\alph*]
@@ -284,7 +284,7 @@
 				\item Arrange and be responsible for handling of the petty cash and to render an account to each Committee member of all petty cash.
 				\item Prepare a financial statement showing all receipts and payments during their term of office, for presentation with auditors report to the Annual General Meeting.
 				\item Produce and deliver all necessary books, vouchers and other documents to the persons appointed by the Guild Finance Committee for the purpose of conducting an audit, in so far as such persons may so required.
-				\item Prepare necessary forms, and receipts for Societies Council in accordance with Semester \& O-day Grant Policies. 
+				\item Prepare necessary forms, and receipts for Societies Council in accordance with Semester \& O-day Grant Policies.
 			\end{enumerate}
 		\section{First Year, Undergraduate and Post Graduate Representatives}
 			\begin{enumerate}[label=\alph*]
@@ -296,19 +296,19 @@
 			\begin{enumerate}[label=\alph*]
 				\item assist the committee in the running of the club
 			\end{enumerate}
-		
+
 		\section{The Man and Woman Representatives}
 			\begin{enumerate}[label=\alph*]
 				\item Represent the interests of their respective genders as pursuant to issues such as grants, general running of the club et cetera.
 				\item Ensure that the club follows all rules and restrictions related to equal opportunity as outlined by the Guild and University of Western Australia.
 			\end{enumerate}
-		
+
 	\chapter{Miscellaneous}
 		\section{Deposits and Withdrawal of Monies}
 			\begin{enumerate}[label=\arabic*]
 				\item All monies due and payable to the Club shall be received by the Treasurer who shall lodge them without undue delay in the Central Banking of Guild Council for the credit of the Club.
 				\item Any two members of the Executive may jointly sign cheques and forms of authority for the payment of funds of the Society.
-				\item Not withstanding anything contained herein, no persons shall deposit or withdraw any monies into any account that Guild Council has closed by resolution. 
+				\item Not withstanding anything contained herein, no persons shall deposit or withdraw any monies into any account that Guild Council has closed by resolution.
 			\end{enumerate}
 		\section{Payments}
 			No payments shall be made on behalf of the club or in the name of the club unless it has been authorised by the Executive Office Bearers.
@@ -321,38 +321,34 @@
 				\item The Club shall comply with the Regulation of the Guild, the Rules of Societies Council, and all other provisions enrolled upon the Guild Statutes book.
 				\item All Office Bearers and committee members shall be jointly and severally responsible for such compliance, and shall be deemed liable in the event of noncompliance therewith.
 			\end{enumerate}
-		
+
 		\section{Expulsion of Members}
 			\begin{enumerate}[label=\arabic*]
 				\item The Committee may by 3/4 vote request any member to resign from the Club, and in the event shall cause written notification of such request to be served upon the member concerned. The vote shall occur at a committee meeting.
-				\item Should such a request prove ineffectual after fourteen days of written notification, the Committee may serve written notice of intended expulsion of the member concerned and should they not have resigned seven days after, the Committee may by unanimous vote expel him or her from the Club; but such expulsion shall be subject to review at the next General Meeting with the member present and to be heard. 
+				\item Should such a request prove ineffectual after fourteen days of written notification, the Committee may serve written notice of intended expulsion of the member concerned and should they not have resigned seven days after, the Committee may by unanimous vote expel him or her from the Club; but such expulsion shall be subject to review at the next General Meeting with the member present and to be heard.
 			\end{enumerate}
-		
+
 		\section{Availability of Constitution}
 			The Committee shall make available on request to all ordinary members this constitution. \\
 			Hard Copies are to be offered at the cost of printing.
-	
+
 	\chapter{Interpretations and Amendments}
-	
+
 	\section{Interpretations}
 		Subject to any provisions enrolled upon the Guild Statutes book and to any resolution passed by Guild Council, Societies Council or Public Affairs Council, the President shall have the power to interpret the meaning of any of the provisions contained in the Constitution, but the determining decision in case of doubt shall rest with the Club in General Meeting.
 		\begin{enumerate}[label=\arabic*]
 			\item 2.1.a, 2.3.a, 2.3.b make mention of the Universities Academic year. To avoid confusion this is referring to the standard teaching period excluding both "Summer Sessions" and "Winter Sessions" - Anton Savill 2017/10/22
-			\item 3.8.3.a "a Club Minute Book" may also be a collection of digital documents written in plain English text. - Anton Savill  2017/11/24  
+			\item 3.8.3.a "a Club Minute Book" may also be a collection of digital documents written in plain English text. - Anton Savill  2017/11/24
 		\end{enumerate}
-	
+
 	\section{Amendments}
 		\begin{enumerate}[label=\alph*]
 			\item Any two financial Ordinary Members of the Club may not less than three days before the day appointed for the next General Meeting submit to the Secretary a notice of motion signed by them proposing an alteration to this Constitution. This shall be posted on notice boards forthwith.
+			\item A public pull request shall be made on which ever version control software the club elects to use (at the time of writing that is git hosted on github) with details about the amendment.
 			\item The motion may then be considered by the Club at its next meeting and amendments that are relevant to the subject matter thereof may be moved without notice.
 			\item The motion of any amendment thereto shall not be deemed adopted unless it receives a two-thirds majority of the members present and voting.
-			\item The motion as adopted with any amendments shall come into force upon receiving the approval of Societies Council.
+			\item The motion as adopted with any amendments shall come into force as per guild rules and regulations.
 		\end{enumerate}
-		
-		%Amendments:
-		%\begin{enumerate}[label=\arabic*]
-		%	\item 
-		%\end{enumerate}
-	
+
 
 \end{document}
