changed wording of gender reps

--- a/cssc-c.tex
+++ b/cssc-c.tex
@@ -196,10 +196,8 @@
 			who shall be elected from the ordinary members of the club completing their undergraduate degree
 			\item Post Graduate Representative\\
 			who shall be elected from the ordinary members doing honours or postgraduate studies.
-			\item Women's Representative\\
-			who shall be elected from the ordinary members of the club.
-			\item Man's Representative\\
-			who shall be elected from the ordinary members of the club.
+			\item Women's and Man's Representatives\\
+			who shall be elected from the ordinary members of the club, of which at least one must identify as a gender other than male.
 			\item Ordinary Committee Members\\
 			who shall be elected from the ordinary members of the club.\\
 			Whose numbers/purpose may change depending on club demand
