Explicily state that the club is not for profit and forbid members from using the clubs resources to directly profit off of the clubs resources

--- a/cssc-c.tex
+++ b/cssc-c.tex
@@ -308,12 +308,22 @@
 				\item Any two members of the Executive may jointly sign cheques and forms of authority for the payment of funds of the Society.
 				\item Not withstanding anything contained herein, no persons shall deposit or withdraw any monies into any account that Guild Council has closed by resolution.
 			\end{enumerate}
+		
 		\section{Payments}
 			No payments shall be made on behalf of the club or in the name of the club unless it has been authorised by the Executive Office Bearers.
+		
+		\section{Commercial Exploitation of the Club}
+		\begin{enumerate}[label=\arabic*]
+			\item The property and income of the Club shall be applied solely towards the promotion of the objects of the Club and no part of that property or income may be paid or otherwise distributed, directly or indirectly, to any person or body, except in good faith in the promotion of those objects.
+			\item In addition, no member of the Club shall use any of the resources of the Club for direct financial gain without prior explicit written permission from a majority of the current executive committee.
+		\end{enumerate}
+		
 		\section{Patron}
 			At any general meeting the club may elect a patron of the club, who may remain the patron of the club until the next general meeting of the club. \\
+		
 		\section{Caretaker Positions}
 		In such a case no suitable candidate can be found for any position, the quorum of a general meeting may elect any willing party to become a caretaker, their obligations shall be identical to the position that they are filling, but at any point they may be challenged for the position by a more suitable candidate. There must also be a concerted effort to fill this position either before or at the next general meeting of the club.
+		
 		\section{Major Obligations to the Guild}
 			\begin{enumerate}[label=\arabic*]
 				\item The Club shall comply with the Regulation of the Guild, the Rules of Societies Council, and all other provisions enrolled upon the Guild Statutes book.
