remove reference to Central Banking of Guild Council

--- a/cssc-c.tex
+++ b/cssc-c.tex
@@ -304,7 +304,7 @@
 	\chapter{Miscellaneous}
 		\section{Deposits and Withdrawal of Monies}
 			\begin{enumerate}[label=\arabic*]
-				\item All monies due and payable to the Club shall be received by the Treasurer who shall lodge them without undue delay in the Central Banking of Guild Council for the credit of the Club.
+				\item All monies due and payable to the Club shall be received by the Treasurer who shall lodge them without undue delay for the credit of the Club.
 				\item Any two members of the Executive may jointly sign cheques and forms of authority for the payment of funds of the Society.
 				\item Not withstanding anything contained herein, no persons shall deposit or withdraw any monies into any account that Guild Council has closed by resolution.
 			\end{enumerate}
