Changes to the constitution and addition of club policies

--- a/cssc-c.tex
+++ b/cssc-c.tex
@@ -19,8 +19,7 @@
 \usepackage{amssymb}
 \usepackage{graphicx}
 
-\author{Proposed By President Savill on 2017-10-16}
-\date{Accepted 2017-10-30}
+\date{Effective 2018-10-23}
 \title{Computer Science Students Club Constitution}
 
 %To hide these full page chapter title page things which are just a waste of paper
@@ -156,6 +155,7 @@
 			\item If quorum is not reached at an election, the results may be accepted by a properly constituted General Meeting of the club, which must be called by the outgoing Secretary immediately.
 			\item Nomination via proxy shall be submitted prior to the beginning of the vote, In the case where a proxy hasn't delegated a representative who is present, the chair shall choose one on the candidates behalf.
 			\item Proxy votes must be submitted via a secret ballot prior to the commencement of the election for the vote to be considered valid, pending approval from the returning officer.
+			\item The validity of all candidates shall be determined by the returning officer. This is to ensure that an outside party is not able to seize the club by force or overwhelming numbers where it may not be in the best interest of the club. This is not to specifically exclude potential candidates where the returning officer disagrees with the individual, only for where the club is under legitimate threat.
 			\item All Elections of the Club shall be conducted in accordance with the regulations governing Guild Elections, except where overruled by this constitution.
 		\end{enumerate}
 
@@ -240,7 +240,7 @@
 	\begin{enumerate}[label=\alph*]
 		\item acquire and dispose of property; to dispose of monies; to open banking accounts; and to enter into contracts. Unless acting under a special enabling resolution of a General Meeting, the Committee shall not borrow money or incur debts or liabilities on behalf of or in the name of the Club to a greater amount than five dollars for each and every then existing financial ordinary member of the Club.
 		\item raise money for the Club by running events, providing that the monies used to fund this event does not exceed the provisions set out in Section a above
-		\item make regulations for the orderly and proper management of the affairs of the Club, but so that no regulation is inconsistent or repugnant to this Constitution.
+		\item make regulations and policies for the orderly and proper management of the affairs of the Club, but so that no regulation or policy is inconsistent or repugnant to this Constitution.
 		\item make, alter, or repeat By-Laws, and to impose fines for the breach therefore. All By-Laws and any alteration or amendment thereof shall be subject to ratification by the Societies Council and the Guild Council before coming into force. The maximum fine imposed may not exceed five dollars (\$5.00)
 	\end{enumerate}
 
@@ -300,8 +300,26 @@
 				\item Represent the interests of their respective genders as pursuant to issues such as grants, general running of the club et cetera.
 				\item Ensure that the club follows all rules and restrictions related to equal opportunity as outlined by the Guild and University of Western Australia.
 			\end{enumerate}
+		
+		\section{Subcommittees}
+			\begin{enumerate}[label=\arabic*]
+			\item Ad-hoc Subcommittees
+				The committee from time to time may make ad-hoc specialized subcommittees which may or may not be granted special powers to carry out their purpose until such a time that either their goal is done or the committee by majority vote choose to disband them.
+			\item Ongoing Subcommittees 
+				In addition there also exists ongoing subcommittees that have their powers, responsibilities and privileges outlined in Policies or Regulations.
+				The Policies or Regulations which govern these subcommittees must be made publicly available wherever the elected committee finds best.
+				Creation of, and changes to these Policies or Regulations for ongoing subcommittees must be passed at a general meeting and are subject to all the same validity requirements as changes to this constitution.
+				The subcommittees have their rights granted to them from the elected committee and are subject to their decisions. These decisions may include but are not limited to decisions on membership to the subcommittee, changes in the rights and responsibilities to the subcommittee (within reason, and only until it can be ratified at the next general meeting) and the continuation of the subcommittees duties.
+				Here is an officially recognised list of ongoing subcommittees
+				\begin{enumerate}[label=\arabic*]
+					\item Custodes (Translates to Guardians - Basically our "Door" group)
+				\end{enumerate}
+			\end{enumerate}
 
 	\chapter{Miscellaneous}
+		\section{History of Versions}
+			2017 - The constitution was rewritten from scratch by President Anton Savill from a proposed 2012 version and the version that was put together by the 2015 committee when it was found that guild didn't have a copy of our actual constitution.
+			2018 - Modifications to the constitution from 1.0.2.0 to 1.0.5.0 Proposed by President Ki Savill
 		\section{Deposits and Withdrawal of Monies}
 			\begin{enumerate}[label=\arabic*]
 				\item All monies due and payable to the Club shall be received by the Treasurer who shall lodge them without undue delay for the credit of the Club.
