forked my original version off a version of the consitution that wasn't the approved one

--- a/cssc-c.tex
+++ b/cssc-c.tex
@@ -96,7 +96,7 @@
 		\end{enumerate}
 		But shall otherwise have all rights and privileges of ordinary members.
 		\subsection{Council of Shadows}
-		Any member who at any point has been, but no longer is an Executive Office bearer is considered to be a part of the council of shadows.
+		Any member who at any point has been, but no longer is an Executive Office bearer is considered to be a part of the council of shadows. The council of shadows does not exist and has no power over the day to day running or general direction of the club.
 	\section{Subscription}
 
 		\begin{enumerate}[label=\alph*]
