Changes to the Custodes Policy on request of the Department

--- a/Policies and Regulations/Custodes/custodes (Guardians).tex
+++ b/Policies and Regulations/Custodes/custodes (Guardians).tex
@@ -24,7 +24,7 @@
 
 \title{Computer Science Students Club Policy}
 \author{Custodes}
-\date{Effective 2018-10-23}
+\date{Draft 2019-07-10}
 
 
 %To hide these full page chapter title page things which are just a waste of paper
@@ -53,7 +53,9 @@
 				\item Be current student members of the University of Western Australia.
 				\item Be willing to accept and carry out all legal directives given to them by committee.
 			\end{enumerate}
-			Additionally all executive members of the committee are automatically Custodes.
+			Additionally all executive members of the committee are to instantly be considered members of Custodes.
+			
+			The number of Custodes shall not exceed 5 regular members plus the current committee. This full list of Custodes with student names and numbers shall be provided to the CSSE Admin so key access can be managed.
 	\chapter{Responsibilities}
 		\section{Main Responsibilities}
 		\begin{enumerate}
@@ -67,6 +69,7 @@
 			\begin{enumerate}
 				\item There may only be people in the clubroom if there is a Custos in the room. This Custos is said to be "holding the room".
 				\item If any Custos is present in the room, the clubroom must be open.
+				\item The room must not be open during hours not previously approved by CSSE admin or the CSSC Committee.
 				\item A Custos may not hold the room open if they are engaged in any activity that significantly reduces their ability to act in accordance with their station.
 				\item If a Custos solely holds the room and intends to leave, they should give as much notice as possible to all members in the room that this is the case and therefore the room will be closing.
 				\item If no other Custos arrives during this time, all members must leave and the departing Custos must close the room before leaving.
