--- a/cssc-c.tex
+++ b/cssc-c.tex
@@ -284,6 +284,13 @@
 				\item Produce and deliver all necessary books, vouchers and other documents to the persons appointed by the Guild Finance Committee for the purpose of conducting an audit, in so far as such persons may so required.
 				\item Prepare necessary forms, and receipts for Societies Council in accordance with Semester \& O-day Grant Policies.
 			\end{enumerate}
+                \subsection{Marketing Officer}
+                         \begin{enumarate}[label=\alph*]
+                                \item Carry out the activities of organising and managing the club's social media platforms
+                                \item To produce and edit marketing material for the club, to be presented to the wider university and/or public audience
+                                \item Possess credential access to all relevant social media accounts, at the President's discretion
+                                 \item Act within the foremost capacity to promote and advertise the club, fully, to all who could be involved with CSSC
+            \end{enumarate} 
 		\section{First Year, Undergraduate and Post Graduate Representatives}
 			\begin{enumerate}[label=\alph*]
 				\item Assist the Executive Office Bearers in the running of the club
