--- a/cssc-c.tex
+++ b/cssc-c.tex
@@ -19,7 +19,7 @@
 \usepackage{amssymb}
 \usepackage{graphicx}
 
-\date{Effective 2018-10-23}
+\date{Effective 2018-10-23 (Passed at the SGM)}
 \title{Computer Science Students Club Constitution}
 
 %To hide these full page chapter title page things which are just a waste of paper
@@ -86,7 +86,7 @@
 			\end{enumerate}
 		\subsection{Honorary Life Memberships}
 			The Club may in General Meeting by two-thirds majority of those present and voting confer Honorary Life Membership upon any member who has performed outstanding service to the Club.
-
+            The Club may in General Meeting, by three-quarters of those present and voting strip and remove Honorary Life Memberships upon any member w
 		\subsection{Primacy of Ordinary Members}
 		Members other than Ordinary Members shall not:
 		\begin{enumerate}[label=\alph*]
@@ -177,11 +177,12 @@
 	\chapter{Committee Positions}
 	\section{Executive Office Bearers}
 	The Executive Office Bearers (Also referred to as the Executive Committee) of the Club shall be elected by the Ordinary Members of the Club at the Annual General Meeting and shall consist of, in order of seniority:
-		\begin{enumerate}[label=\alph*]
+		\begin{enumerate}[label=\alph*]	
 			\item The President
 			\item The Vice President
 			\item The Secretary
 			\item The Treasurer
+			\item The Marketing Officer
 		\end{enumerate}
 
 	\section{The Committee}
@@ -196,7 +197,7 @@
 			who shall be elected from the ordinary members of the club completing their undergraduate degree
 			\item Post Graduate Representative\\
 			who shall be elected from the ordinary members doing honours or postgraduate studies.
-			\item Women's and Man's Representatives\\
+			\item Gender Equity Representative\\
 			who shall be elected from the ordinary members of the club, of which at least one must identify as a gender other than male.
 			\item Ordinary Committee Members\\
 			who shall be elected from the ordinary members of the club.\\
@@ -256,7 +257,7 @@
 				\item Generally carry out the policy of the club
 				\item Coordinate and supervise the work of the Executive Officer Bearers, subject to the authority of the club in general meetings
 				\item See that all Office-Bearers are conversant with the constitution and their respective duties and responsibilities
-				\item Be commander-in-chief of the Air, Land and Naval power of the Club.
+				\item Be commander-in-chief of the Air, Land, Naval, Cyber, and Space force
 			\end{enumerate}
 		\subsection{Vice President}
 			\begin{enumerate}[label=\alph*]
@@ -284,31 +285,31 @@
 				\item Produce and deliver all necessary books, vouchers and other documents to the persons appointed by the Guild Finance Committee for the purpose of conducting an audit, in so far as such persons may so required.
 				\item Prepare necessary forms, and receipts for Societies Council in accordance with Semester \& O-day Grant Policies.
 			\end{enumerate}
-                \subsection{Marketing Officer}
-                         \begin{enumarate}[label=\alph*]
-                                \item Carry out the activities of organising and managing the club's social media platforms
-                                \item To produce and edit marketing material for the club, to be presented to the wider university and/or public audience
-                                \item Possess credential access to all relevant social media accounts, at the President's discretion
-                                 \item Act within the foremost capacity to promote and advertise the club, fully, to all who could be involved with CSSC
-            \end{enumarate} 
-		\section{First Year, Undergraduate and Post Graduate Representatives}
+		\subsection{Marketing Officer}
+            \begin{enumerate}[label=\alph*]
+                \item Carry out the activities of organising and managing the club's social media platforms
+                \item To produce and edit marketing material for the club, to be presented to the wider university and/or public audience
+                \item Possess credential access to all relevant social media accounts, at the President's discretion
+                \item Act within the foremost capacity to promote and advertise the club, fully, to all who could be involved with the Computer Science Students Club
+            \end{enumerate}
+		\subsection{First Year, Undergraduate and Post Graduate Representatives}
 			\begin{enumerate}[label=\alph*]
 				\item Assist the Executive Office Bearers in the running of the club
 				\item Promote social interaction within their year group and between year groups.
 				\item Raise concerns and queries from their year group as agenda items in the regular committee meetings
 			\end{enumerate}
-		\section{Ordinary Committee Members}
+		\subsection{Ordinary Committee Members}
 			\begin{enumerate}[label=\alph*]
 				\item assist the committee in the running of the club
 			\end{enumerate}
-
-		\section{The Man and Woman Representatives}
+pd
+		\subsection{Gender Equity Representatives}
 			\begin{enumerate}[label=\alph*]
 				\item Represent the interests of their respective genders as pursuant to issues such as grants, general running of the club et cetera.
 				\item Ensure that the club follows all rules and restrictions related to equal opportunity as outlined by the Guild and University of Western Australia.
 			\end{enumerate}
 		
-		\section{Subcommittees}
+		\subsection{Subcommittees}
 			\begin{enumerate}[label=\arabic*]
 			\item Ad-hoc Subcommittees
 				The committee from time to time may make ad-hoc specialized subcommittees which may or may not be granted special powers to carry out their purpose until such a time that either their goal is done or the committee by majority vote choose to disband them.
@@ -317,17 +318,16 @@
 				The Policies or Regulations which govern these subcommittees must be made publicly available wherever the elected committee finds best.
 				Creation of, and changes to these Policies or Regulations for ongoing subcommittees must be passed at a general meeting and are subject to all the same validity requirements as changes to this constitution.
 				The subcommittees have their rights granted to them from the elected committee and are subject to their decisions. These decisions may include but are not limited to decisions on membership to the subcommittee, changes in the rights and responsibilities to the subcommittee (within reason, and only until it can be ratified at the next general meeting) and the continuation of the subcommittees duties.
-				Here is an officially recognised list of ongoing subcommittees
-				\begin{enumerate}[label=\arabic*]
-					\item Custodes (Translates to Guardians - Basically our "Door" group)
 				\end{enumerate}
-			\end{enumerate}
 
 	\chapter{Miscellaneous}
 		\section{History of Versions}
-			2017 - The constitution was rewritten from scratch by President Anton Savill from a proposed 2012 version and the version that was put together by the 2015 committee when it was found that guild didn't have a copy of our actual constitution.
-			2018 - Modifications to the constitution from 1.0.2.0 to 1.0.5.0 Proposed by President Ki Savill
-		\section{Deposits and Withdrawal of Monies}
+		    \begin{enumerate}[label=\arabic*]
+			\item 2017 - The constitution was rewritten from scratch by President Anton Savill from a proposed 2012 version and the version that was put together by the 2015 committee when it was found that guild didn't have a copy of our actual constitution.
+			\item 2018 - Modifications to the constitution from 1.0.2.0 to 1.0.5.0 Proposed by President Ki Savill
+			\item 2022 - The constitution was amended to officially recognise the office of Marketing Officer as an executive position, along with other formatting and grammatical changes. - Proposed by Vice-President Jordan Campbell
+			\end{enumerate}
+	    \section{Deposits and Withdrawal of Monies}
 			\begin{enumerate}[label=\arabic*]
 				\item All monies due and payable to the Club shall be received by the Treasurer who shall lodge them without undue delay for the credit of the Club.
 				\item Any two members of the Executive may jointly sign cheques and forms of authority for the payment of funds of the Society.
@@ -344,11 +344,13 @@
 		\end{enumerate}
 		
 		\section{Patron}
-			At any general meeting the club may elect a patron of the club, who may remain the patron of the club until the next general meeting of the club. \\
-		
+		    \begin{enumerate}[label=\arabic*]
+			  \item At any general meeting the club may elect a patron of the club, who may remain the patron of the club until the next general meeting of the club. \\
+			\end{enumerate}
 		\section{Caretaker Positions}
-		In such a case no suitable candidate can be found for any position, the quorum of a general meeting may elect any willing party to become a caretaker, their obligations shall be identical to the position that they are filling, but at any point they may be challenged for the position by a more suitable candidate. There must also be a concerted effort to fill this position either before or at the next general meeting of the club.
-		
+		     \begin{enumerate}[label=\arabic*]
+		       \item In such a case no suitable candidate can be found for any position, the quorum of a general meeting may elect any willing party to become a caretaker, their obligations shall be identical to the position that they are filling, but at any point they may be challenged for the position by a more suitable candidate. There must also be a concerted effort to fill this position either before or at the next general meeting of the club.
+             \end{enumerate}
 		\section{Major Obligations to the Guild}
 			\begin{enumerate}[label=\arabic*]
 				\item The Club shall comply with the Regulation of the Guild, the Rules of Societies Council, and all other provisions enrolled upon the Guild Statutes book.
